# singletonize

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: publish.yml
singletonize/: __init__.py
singletonize/_metaclasses/: __init__.py  singleton_meta.py
singletonize/_singleton/: __init__.py  _base_singleton.py  singleton.py  singleton_abc.py
singletonize/_utils/: __init__.py  cleaner.py  instance_cleaner.py  lean_bfs.py
tests/metaclasses/: test_singleton_meta.py
tests/singleton/: config.py  test__base_singleton.py  test_multithreading.py  test_performance.py  test_singleton.py  test_singleton_abc.py
tests/utils/: test_cleaner.py  test_instance_cleaner.py
